Bug 253867 - Webpage renders incorrectly or with an error
Summary: Webpage renders incorrectly or with an error
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: kdewebkit (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Andrea Diamantini
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-10-11 19:38 UTC by JantarMantar
Modified: 2010-12-05 02:16 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description JantarMantar 2010-10-11 19:38:11 UTC
Version:           0.6.1 (using KDE 4.5.2) 
OS:                Linux

The following URL produces incorrectly rendered web-page and an error message.

https://membership.usairways.com/Login.aspx?ReturnUrl=http%3a%2f%2fmembership.usairways.com%2fManage%2fAccountSummary.aspx

This link works fine in other mainstream browsers such as chrome and firefox.

Reproducible: Always

Steps to Reproduce:
click on https://membership.usairways.com/Login.aspx?ReturnUrl=http%3a%2f%2fmembership.usairways.com%2fManage%2fAccountSummary.aspx

Actual Results:  
The way rekonq renderes the page.

Expected Results:  
The way chrome and firefox render the page
Comment 1 Panagiotis Papadopoulos 2010-11-03 01:11:57 UTC
I can confirm this happens in rekonq.

Arora and Surf (GTK WebKit browser) show the website fine
Comment 2 Dawit Alemayehu 2010-12-03 10:59:08 UTC
Can be reproduced with all kdewebkit based browsers. Seems to work fine with tow QtWebKit only based browsers, QtTestBrowser and Arora.
Comment 3 Dawit Alemayehu 2010-12-05 02:16:56 UTC
SVN commit 1203664 by adawit:

- Use the content-type metadata sent by the client regardless of request method.
- Append "Content-Type:" if it is missing from the meta-data sent by the client.

BUG:253867


 M  +5 -4      http.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1203664