- Use the content-type metadata sent by the client regardless of request method. - Append "Content-Type:" if it is missing from the meta-data sent by the client.

BUG:253867

svn path=/trunk/KDE/kdelibs/; revision=1203664